fix ios overflow

--- a/src/css/base/main.styl
+++ b/src/css/base/main.styl
@@ -1,4 +1,6 @@
-body
+body, html
+  width 100vw
+  height 100vh
   color $black
   font-size $font-size-base
   font-family $font-main
